--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,8 +46,8 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
+exec-once = swayidle -w timeout 200 'swaylock -f'
+exec-once = hyprpaper
 exec-once = waybar & ~/.config/scripts/wallpaper.sh & dunst
 
 
@@ -70,7 +70,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 15
 
     border_size = 5
 
@@ -203,7 +203,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod_SHIFT, return, exec, $terminal
 bind = $mainMod_SHIFT, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, M, exec, swaylock -f
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, $menu
