--- a/waybar/config
+++ b/waybar/config
@@ -5,9 +5,19 @@
     "margin-left":10,
     "margin-right":10,
 
-	"modules-left": ["cpu","memory","temperature", "bluetooth","power-profiles-daemon"],
+	"modules-left": ["custom/eosicon","cpu","memory","temperature", "bluetooth","power-profiles-daemon"],
 	"modules-center": ["hyprland/workspaces"],
-	"modules-right": ["cava", "network","pulseaudio", "battery","tray","clock"],
+	"modules-right": ["cava", "network","pulseaudio", "battery","tray","clock","custom/power"],
+
+	"custom/eosicon": {
+    		"format": "",
+    		"tooltip": false
+	},
+
+	"custom/power": {
+		"format": "  ",
+		"on-click": "wlogout"
+	},
 
     "power-profiles-daemon": {
       "format": "{icon}",
@@ -30,7 +40,7 @@
 	"cava_config": "/home/reukae/.config/cava/config",
         "framerate": 60,
         "autosens": 1,
-        "sensitivity": 1.5,
+        "sensitivity": 2.7,
         "bars": 12,
         "lower_cutoff_freq": 50,
         "higher_cutoff_freq": 10000,
